--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,7 @@ a:hover {
                 -5px -5px 15px #ddd;
 }
 .imgs .img {
-    width: 400px;
+    width: 420px;
     height: 220px;
 }
 .imgs .img img {
@@ -368,4 +368,13 @@ footer {
 .logoimg img {
     width: 100%;
     height: 100%;
+}
+.gotop {
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    background: #b5c48a7e;
+    cursor: pointer;
+    box-shadow: inset -5px -5px 10px rgba(80, 167, 39, 0.671);
 }
